# token-list

./: CONTRIBUTING.md  pyproject.toml  ruff.toml  tokenlist-mainnet.json
mainnet/AUSD/: data.json
mainnet/BBNK/: data.json
mainnet/BTC.b/: data.json
mainnet/Cake/: data.json
mainnet/DUST/: data.json
mainnet/EUL/: data.json
mainnet/FOLKS/: data.json
mainnet/LBTC/: data.json
mainnet/LV/: data.json
mainnet/LVMON/: data.json
mainnet/LVUSD/: data.json
mainnet/MON/: data.json
mainnet/MVT/: data.json
mainnet/NXPC/: data.json
mainnet/SOL/: data.json
mainnet/SolvBTC/: data.json
mainnet/USD1/: data.json
mainnet/USDC/: data.json
mainnet/USDT0/: data.json
mainnet/WBTC/: data.json
mainnet/WETH/: data.json
mainnet/XAUt0/: data.json
mainnet/earnAUSD/: data.json
mainnet/ezETH/: data.json
mainnet/gMON/: data.json
mainnet/loAZND/: data.json
mainnet/pufETH/: data.json
mainnet/sMON/: data.json
mainnet/shMON/: data.json
mainnet/suETH/: data.json
mainnet/suUSD/: data.json
mainnet/weETH/: data.json
mainnet/wsrUSD/: data.json
mainnet/wstETH/: data.json
mainnet/xSolvBTC/: data.json
scripts/: validate_tokens.py
