[project]
name = "token-list"
version = "0.0.1"
description = "Monad Token List"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "json5>=0.12.1",
    "pillow>=11.0.0",
    "pyjson5>=2.0.0",
    "requests>=2.32.5",
    "web3>=7.6.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.4",
]
